# neil-hgcc

./: .gitignore  INSTALL.md  Makefile.am  README.md  STRING-CODEGEN-IMPROVEMENTS.md  configure.ac  hgcclib.py  hgccvars.py.in  hgcompile.py  hglink.py
.github/workflows/: build_and_test.yml  ci.yml
acinclude/: check_clang.m4  check_cuda.m4  check_python.m4  check_stl_replacement.m4
clang/: astVisitor.cc  astVisitor.h  codeBuilder.h  computeLoops.h  computeVisitor.cc  computeVisitor.h  gpuCostModel.h  gpuPragma.cc  gpuPragma.h
config_tools/: get_py_ldflags
docs/: gpu_calibration.schema.json
examples/: Makefile.am  scale_topo.py
examples/codesign/: README.md  bottleneck.sh  bottleneck_chart.py  pareto.py  sweep_infer.sh  sweep_train.sh
examples/memory_model/: README.md  capacity.py  frontier_sweep.sh
examples/mercury_3d/: README.md  factorization_sweep.sh  parallel3d.cu  parallel3d.py  run.sh
examples/mercury_context/: README.md  ring_attn.cu  ring_attn.py  run.sh
examples/mercury_cuda_halo/: README.md  gpu_calibration.json  halo.cu  halo.py  run.sh
examples/mercury_fsdp/: README.md  fsdp.cu  fsdp.py  run.sh
examples/mercury_hello/: hello.cc  hello.py  run.sh
examples/mercury_hello_pragma/: hello_pragma.cc  hello_pragma.py  run.sh
examples/mercury_inference/: README.md  infer.cu  infer.py  run.sh
examples/mercury_llm_train/: README.md  run.sh  train.cu  train.py
examples/mercury_megatron/: README.md  megatron.cu  megatron.py  run.sh
examples/mercury_moe/: README.md  moe.cu  moe.py  skew_sweep.sh
examples/pragmas/blocking/demo_full/: blocking_app.cc  blocking_app.py  run.sh
examples/pragmas/compute/demo_full/: compute_app.cc  compute_app.py  run.sh
examples/pragmas/memoize/: demo.cc
examples/validation/: README.md  analytic_baseline.py  validate.sh
hgcc_include/libraries/: hg_cuda.h  sst_hg_cuda_calibrate.h
replacement-tests/: build_cuda.sh  test_cuda_headers.cu
replacements/cuda/: cuda_runtime.h  device_launch_parameters.h  driver_types.h  hg_cuda_shims.h  vector_types.h
spike/: FINDINGS.md  hg_cuda.h  run.sh  stub_hg_cuda.cc  vecadd.cu
spike/expected/: sst.pp.vecadd.cu.cc
spike/stubs/: cuda_runtime.h  device_launch_parameters.h  driver_types.h  vector_types.h
support/: gen_symbol_wrappers.py
support/mv2/: check_mpi_wrappers.py  mv2_mpi_wrappers.c
tests/: Makefile.am  cuda_calibration.json  run_test_cuda_3d.sh  run_test_cuda_arch.sh  run_test_cuda_context.sh  run_test_cuda_fsdp.sh  run_test_cuda_inference.sh  run_test_cuda_llm_train.sh  run_test_cuda_megatron.sh  run_test_cuda_moe.sh  run_test_cuda_mpi_halo.sh  run_test_cuda_streams.sh  run_test_cuda_vecadd.sh  run_test_tls.sh  test_cuda_mpi_halo.cu  test_cuda_mpi_halo.py  test_cuda_streams.cu  test_cuda_streams.py  test_cuda_vecadd.cu  test_cuda_vecadd.py  test_hgcompile_ast_smoke.py
tests/lit-tests/: README.md  lit.cfg.py  run-lit.sh
tests/lit-tests/cuda/: delete-sideeffect.cu  derived-collision-accum.cu  derived-collision-builtins.cu  derived-cost-vecadd.cu  derived-loop-fallback.cu  derived-param-collision.cu  device-global-exempt.cu  error-query.cu  gpu-compute-parse.cu  gpu-compute-pragma.cu  headers-parse.cu  headers-positive.cu  host-device-exempt.cu  launch-delete.cu  launch-dependent.cu  launch-encapsulate.cu  launch-rewrite.cu  launch-sideeffect.cu
tests/mv2/: _mv2_run_common.sh
